<resources>
    <string name="app_name">GeoQuiz</string>
    <string name="question_poland">Is Warsaw the capital of Poland?</string>
    <string name="question_mazovia">Is Radom the capital of Mazovia?</string>
    <string name="question_oceans">The Pacific ocean is larger than the
    Atlantic ocean.</string>
    <string name="question_mideast">The Suez Canal connects the Red Sea
    and the Indian Ocean.</string>
    <string name="true_button">True</string>
    <string name="false_button">False</string>
    <string name="previous_button">Prev</string>
    <string name="next_button">Next</string>
    <string name="correct_toast">Correct! :-)</string>
    <string name="incorrect_toast">Incorrect! :-(</string>
</resources>